--- a/index.html
+++ b/index.html
@@ -10,9 +10,52 @@
 </head>
 <body>
   <main class="wrapper">
-    <h1>Welcome to ORIGAMI Site</h1>
+    <h1>Welcome to "ORIGAMI" Site</h1>
+
+    <p>Origami is a traditional Japanese art of paper folding. It uses many techniques and various objects can be created. The object is made of origami paper, which is specially made for folding and staying in shape.</p>
+
+
 
   <!-- using inline SVG files -->
+  <div class="img-wrapper black-bg">
+    <h3>Swan</h3>
+  <object data="images/swan.svg" type="image/svg+xml"></object></div>
+
+  <div class="img-wrapper black-bg">
+    <h3>cat</h3>
+  <object data="images/cat.svg" type="image/svg+xml"></object></div>
+
+  <div class="img-wrapper black-bg">
+    <h3>elephant</h3>
+  <object data="images/elephant.svg" type="image/svg+xml"></object></div>
+
+  <div class="img-wrapper black-bg">
+    <h3>hedgehog</h3>
+  <object data="images/hedgehog.svg" type="image/svg+xml"></object></div>
+
+  <div class="img-wrapper black-bg">
+    <h3>kangaroo</h3>
+  <object data="images/kangaroo.svg" type="image/svg+xml"></object></div>
+
+  <div class="img-wrapper black-bg">
+    <h3>mouse</h3>
+  <object data="images/mouse.svg" type="image/svg+xml"></object></div>
+
+  <div class="img-wrapper black-bg">
+    <h3>penguin</h3>
+  <object data="images/penguin.svg" type="image/svg+xml"></object></div>
+
+  <div class="img-wrapper black-bg">
+    <h3>pigeon</h3>
+  <object data="images/pigeon.svg" type="image/svg+xml"></object></div>
+
+  <div class="img-wrapper black-bg">
+    <h3>rabbit</h3>
+  <object data="images/rabbit.svg" type="image/svg+xml"></object></div>
+
+  <div class="img-wrapper black-bg">
+    <h3>whale</h3>
+  <object data="images/whale.svg" type="image/svg+xml"></object></div>
 
   <!-- end inline SVG -->
 
